# zero-knowledge-gadgets

./: .codecov.yml  .gitignore  .gitmodules  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: build.yml  checks.yml  coverage.yml
arkworks-benchmarks/: Cargo.toml
arkworks-benchmarks/src/: benches.rs  lib.rs  main.rs
arkworks-circom-verifier/: Cargo.toml
arkworks-circom-verifier/src/: lib.rs  utils.rs  verifier.rs
arkworks-circom-verifier/test-vectors/: inputs.json  poseidon_vanchor_2_2.r1cs  poseidon_vanchor_2_2.wasm  proof.json  proof_wrong.json
arkworks-circuits/: Cargo.toml
arkworks-circuits/src/: anchor.rs  basic.rs  lib.rs  mixer.rs  mod.rs  poseidon.rs  vanchor.rs
arkworks-corcom-verifier/: Cargo.toml
arkworks-corcom-verifier/src/: lib.rs  verifier.rs
arkworks-corcom-verifier/test-vectors/: exdata.json  vanchor_circuit_final_2_2.zkey
arkworks-fixtures/: .gitignore  Cargo.toml
arkworks-fixtures/src/: main.rs
arkworks-gadgets/: Cargo.toml
arkworks-gadgets/src/: lib.rs
arkworks-gadgets/src/arbitrary/: mod.rs
arkworks-gadgets/src/arbitrary/bridge_data/: constraints.rs
arkworks-gadgets/src/arbitrary/mixer_data/: constraints.rs
arkworks-gadgets/src/arbitrary/vanchor_data/: constraints.rs  mod.rs
arkworks-gadgets/src/identity/: constraints.rs  mod.rs
arkworks-gadgets/src/keypair/vanchor/: constraints.rs  mod.rs
arkworks-gadgets/src/leaf/: mod.rs
arkworks-gadgets/src/leaf/anchor/: constraints.rs  mod.rs
arkworks-gadgets/src/leaf/basic/: constraints.rs  mod.rs
arkworks-gadgets/src/leaf/bridge/: constraints.rs  mod.rs
arkworks-gadgets/src/leaf/mixer/: constraints.rs  mod.rs
arkworks-gadgets/src/leaf/vanchor/: constraints.rs  mod.rs
arkworks-gadgets/src/merkle_tree/: constraints.rs  mod.rs  simple_merkle.rs  simple_merkle_constraints.rs
arkworks-gadgets/src/mimc/: constraints.rs  mod.rs
arkworks-gadgets/src/poseidon/: constraints.rs  field_hasher.rs  field_hasher_constraints.rs  mod.rs
arkworks-gadgets/src/poseidon/circom/: constraints.rs  mod.rs
arkworks-gadgets/src/set/: constraints.rs  mod.rs  simple_set_gadget.rs
arkworks-gadgets/src/set/membership/: constraints.rs  mod.rs
arkworks-gadgets/src/setup/: common.rs  mod.rs
arkworks-native-gadgets/: Cargo.toml
arkworks-native-gadgets/src/: lib.rs  merkle_tree.rs  mimc.rs  poseidon.rs
arkworks-native-gadgets/src/poseidon/: mod.rs  sbox.rs
arkworks-plonk-circuits/: Cargo.toml
arkworks-plonk-circuits/src/: anchor.rs  lib.rs  mixer.rs  utils.rs  vanchor.rs
arkworks-plonk-circuits/src/anchor/: mod.rs
arkworks-plonk-circuits/src/merkle_tree/: mod.rs
arkworks-plonk-circuits/src/mixer/: mod.rs
arkworks-plonk-circuits/src/poseidon/: mod.rs  poseidon.rs  sbox.rs
arkworks-plonk-circuits/src/set_membership/: mod.rs
arkworks-plonk-circuits/src/vanchor/: mod.rs
arkworks-plonk-gadgets/: Cargo.toml
arkworks-plonk-gadgets/src/: lib.rs  merkle_tree.rs  set.rs
arkworks-plonk-gadgets/src/poseidon/: mod.rs  sbox.rs
arkworks-r1cs-circuits/: Cargo.toml
arkworks-r1cs-circuits/src/: anchor.rs  basic.rs  lib.rs  mixer.rs  mod.rs  poseidon.rs  vanchor.rs
arkworks-r1cs-gadgets/: Cargo.toml
arkworks-r1cs-gadgets/src/: lib.rs  merkle_tree.rs  mimc.rs  poseidon.rs  set.rs
arkworks-r1cs-gadgets/src/poseidon/: mod.rs
arkworks-setups/: Cargo.toml
arkworks-setups/src/: aead.rs  common.rs  keypair.rs  lib.rs  utxo.rs
arkworks-setups/src/r1cs/: mod.rs
arkworks-setups/src/r1cs/anchor/: mod.rs  tests.rs
arkworks-setups/src/r1cs/mixer/: mod.rs  tests.rs
arkworks-setups/src/r1cs/vanchor/: mod.rs  tests.rs  utxo.rs
arkworks-utils/: Cargo.toml
arkworks-utils/src/: lib.rs
arkworks-utils/src/mimc/: constraints.rs  ed_on_bn254_mimc.rs  mod.rs
arkworks-utils/src/mimc_params/: mod.rs
arkworks-utils/src/poseidon/: constraints.rs  mod.rs
arkworks-utils/src/poseidon/sbox/: constraints.rs
arkworks-utils/src/poseidon_params/: bn254_x17_3.rs  bn254_x17_5.rs  bn254_x3_5.rs  bn254_x5_2.rs  bn254_x5_3_result.rs  bn254_x5_4.rs  bn254_x5_5.rs  bn254_x5_5_result.rs  mod.rs
arkworks-utils/src/utils/: bls381_x17_3.rs  bls381_x17_5.rs  bls381_x3_3.rs  bls381_x3_5.rs  bls381_x5_3.rs  bls381_x5_5.rs  bn254_x17_3.rs  bn254_x17_5.rs  bn254_x3_3.rs  bn254_x3_5.rs  bn254_x5_2.rs  bn254_x5_3.rs  bn254_x5_4.rs  bn254_x5_5.rs  common.rs  mod.rs
arkworks/benchmarks/: Cargo.toml
arkworks/benchmarks/src/: main.rs
arkworks/native-gadgets/: Cargo.toml
arkworks/plonk-circuits/: Cargo.toml
arkworks/plonk-circuits/src/: anchor.rs  lib.rs  mixer.rs  utils.rs  vanchor.rs
arkworks/plonk-gadgets/: Cargo.toml
arkworks/plonk-gadgets/src/: lib.rs  merkle_tree.rs
arkworks/plonk-gadgets/src/poseidon/: mod.rs  sbox.rs
arkworks/plonk-hashing/: Cargo.toml
arkworks/r1cs-circuits/: Cargo.toml
arkworks/r1cs-gadgets/: Cargo.toml
arkworks/r1cs-gadgets/src/: merkle_tree.rs
arkworks/setups/: Cargo.toml
arkworks/utils/: Cargo.toml
benches/: bench.rs
halo2/mpt-storage-proofs/: Cargo.toml
scripts/: bench.sh  build-wasm.sh  build.sh  checks.sh  publish-dry-run.sh  test.sh
src/: lib.rs
src/arbitrary/: constraints.rs  mod.rs
src/circuit/: basic.rs  bridge.rs  mixer.rs  mixer_circuit.rs  mod.rs  poseidon.rs  poseidon_circuit.rs  vanchor.rs
src/keypair/: constraints.rs  mod.rs
src/leaf/: constraints.rs  mod.rs
src/merkle_tree/: constraints.rs  mod.rs
src/mimc/: constraints.rs  mod.rs
src/plonk/: poseidon.rs
src/poseidon/: constraints.rs  mod.rs
src/set/: constraints.rs  mod.rs
src/setup/: bridge.rs  common.rs  mixer.rs  mod.rs  vanchor.rs
src/test_data/: mod.rs  result_x5_254_5.rs  x5_254_5.rs
src/utils/: bls381_x17_3.rs  bls381_x17_5.rs  bls381_x3_3.rs  bls381_x3_5.rs  bls381_x5_3.rs  bls381_x5_5.rs  bn254_circom_x3_3.rs  bn254_circom_x5_3.rs  bn254_circom_x5_5.rs  bn254_x17_3.rs  bn254_x17_5.rs  bn254_x3_3.rs  bn254_x3_5.rs  bn254_x5_2.rs  bn254_x5_3.rs  bn254_x5_3_result.rs  bn254_x5_4.rs  bn254_x5_5.rs  ed_on_bn254_x17_3.rs  ed_on_bn254_x17_5.rs  ed_on_bn254_x3_3.rs  ed_on_bn254_x3_5.rs  ed_on_bn254_x5_3.rs  mod.rs  types.rs  (+1 more)
(+79 files in other folders)
