[workspace]

members = [
    "arkworks-native-gadgets",
    # R1CS gadgets + circuits
    "arkworks-r1cs-circuits",
    "arkworks-r1cs-gadgets",
    # Utils and setups
    "arkworks-setups",
    "arkworks-utils",
]

exclude = [
    "arkworks-plonk-circuits",
    "arkworks-plonk-gadgets",
    "arkworks-benchmarks",
    "arkworks-utils"
]