[package]
name = "arkworks-benchmarks"
version = "0.3.14"
authors = ["Webb Developers"]
edition = "2018"
description = "Webb protocol's zero-knowledge gadgets written using Arkworks"
license = "MIT/Apache-2.0"
repository = "https://github.com/webb-tools/arkworks-gadgets"
homepage = "https://webb.tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arkworks-utils = {path = "../arkworks-utils"}
arkworks-gadgets = {path = "../arkworks-gadgets"}
arkworks-circuits = {path = "../arkworks-circuits"}

ark-crypto-primitives = { version = "^0.3.0", features = ["r1cs"], default-features = false }
ark-ff = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }

ark-marlin = {version = "^0.3.0", default-features = false }
ark-groth16 = {version = "^0.3.0", default-features = false }
blake2 = { version = "0.9", default-features = false }
ark-poly-commit = { version = "^0.3.0", default-features = false }
ark-poly = { version = "^0.3.0", default-features = false }
ark-snark = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-serialize = {version = "^0.3.0", default-features = false }
digest = { version = "0.9" }

# curves
ark-ed-on-bls12-381 = { version = "^0.3.0", default-features = false, features = [ "r1cs" ] }
ark-ed-on-bn254 = { version = "^0.3.0", default-features = false, features = [ "r1cs" ] }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
ark-bn254 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }

paste = { version = "1.0.5" }
ethabi = {version = "15.0.0"}
hex-literal = {version = "0.3.4"}
tiny-keccak = {version = "2.0.2"}
