[package]
name = "arkworks-native-gadgets"
version = "0.5.0"
authors = ["Webb Developers"]
edition = "2018"
description = "Webb protocol's native gadgets"
license = "Apache-2.0"
repository = "https://github.com/webb-tools/arkworks-gadgets"
homepage = "https://webb.tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-crypto-primitives = { version = "^0.3.0", features = ["r1cs"], default-features = false }

[dev-dependencies]
# curves
ark-ed-on-bls12-381 = { version = "^0.3.0", default-features = false, features = [ "r1cs" ] }
ark-ed-on-bn254 = { version = "^0.3.0", default-features = false, features = [ "r1cs" ] }
ark-bn254 = { version = "^0.3.0", default-features = false }

[dev-dependencies.arkworks-utils]
path = "../arkworks-utils"
default-features = false
features = ["poseidon_bn254_x5_2", "poseidon_bn254_x5_3", "poseidon_bn254_x5_4", "poseidon_bn254_x5_5", "poseidon_bls381_x5_3", "mimc_ed_on_bn254_220"]

[features]
default = ["std"]
std = [
  "ark-std/std",
  "ark-ff/std",
  "ark-crypto-primitives/std",
]
parallel = [
  "ark-crypto-primitives/parallel",
  "ark-ff/parallel",
  "ark-std/parallel",
]
