[package]
name = "arkworks-plonk-circuits"
version = "0.1.0"
authors = ["Webb Developers"]
edition = "2021"
description = "Webb protocol's Plonk zero-knowledge circuits using Arkworks (ark-plonk)"
license = "MIT/Apache-2.0"
repository = "https://github.com/webb-tools/arkworks-gadgets"
homepage = "https://webb.tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arkworks-utils = {path = "../arkworks-utils",  version = "0.4.0"}
ark-crypto-primitives = { version = "^0.3.0", features = ["r1cs"], default-features = false }
ark-ff = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-plonk = { version = "^0.8", git = "https://github.com/ZK-Garage/plonk", default-features = false }

ark-poly-commit = { version = "^0.3.0", default-features = false }
ark-poly = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-serialize = {version = "^0.3.0", default-features = false }

# curves
ark-ed-on-bn254 = { version = "^0.3.0", default-features = false, features = [ "r1cs" ] }
ark-bn254 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
arkworks-gadgets = {path = "../arkworks-gadgets",  version = "0.4.0", default-features = false }

[features]
default = ["std"]
std = ["ark-std/std"]