[package]
name = "arkworks-plonk-gadgets"
version = "0.5.0"
authors = ["Webb Developers"]
edition = "2021"
description = "Webb protocol's Plonk zero-knowledge circuits using Arkworks (ark-plonk)"
license = "MIT/Apache-2.0"
repository = "https://github.com/webb-tools/arkworks-gadgets"
homepage = "https://webb.tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arkworks-native-gadgets = { path = "../arkworks-native-gadgets", version = "0.5.0", default-features = false }

ark-ff = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
plonk-core = { version = "^0.8", git = "https://github.com/ZK-Garage/plonk", features = ["trace"], default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }

[dev-dependencies]
plonk-hashing = { git = "https://github.com/ZK-Garage/plonk.git", branch = "poseidon_hash" }
ark-poly-commit = { version = "^0.3.0", default-features = false }
ark-poly = { version = "^0.3.0", default-features = false }
ark-serialize = {version = "^0.3.0", default-features = false }

# curves
ark-ed-on-bn254 = { version = "^0.3.0", default-features = false, features = [ "r1cs" ] }
ark-bn254 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }

[dev-dependencies.arkworks-utils]
path = "../arkworks-utils"
version = "0.5.0"
default-features = false
features = ["poseidon_bn254_x5_3"]

[features]
default = ["std"]
std = [
    "ark-std/std",
    "arkworks-native-gadgets/std",
    "ark-ff/std",
    "ark-ec/std",
]
