[package]
name = "arkworks-r1cs-gadgets"
version = "0.5.0"
authors = ["Webb Developers"]
edition = "2018"
description = "Webb protocol's zero-knowledge gadgets written using Arkworks"
license = "MIT/Apache-2.0"
repository = "https://github.com/webb-tools/arkworks-gadgets"
homepage = "https://webb.tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arkworks-native-gadgets = { path = "../arkworks-native-gadgets",  version = "0.5.0", default-features = false }
ark-crypto-primitives = { version = "^0.3.0", features = ["r1cs"], default-features = false }
ark-ff = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }

[dev-dependencies]
ark-marlin = {version = "^0.3.0", default-features = false }
ark-groth16 = {version = "^0.3.0", default-features = false }
blake2 = { version = "0.9", default-features = false }
ark-poly-commit = { version = "^0.3.0", default-features = false }
ark-poly = { version = "^0.3.0", default-features = false }
ark-snark = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-serialize = {version = "^0.3.0", default-features = false }
digest = { version = "0.9" }
crypto_box = { version = "0.7.1" }

# curves
ark-ed-on-bls12-381 = { version = "^0.3.0", default-features = false, features = [ "r1cs" ] }
ark-ed-on-bn254 = { version = "^0.3.0", default-features = false, features = [ "r1cs" ] }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
ark-bn254 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }

[dev-dependencies.arkworks-utils]
path = "../arkworks-utils"
version = "0.5.0"
default-features = false
features = ["poseidon_bls381_x5_3", "mimc_ed_on_bn254_220"]

[features]
default = ["std"]
std = [
  "ark-std/std",
]
parallel = [
  "ark-crypto-primitives/parallel",
  "ark-ff/parallel",
  "ark-std/parallel",
  "ark-r1cs-std/parallel",
  "ark-marlin/parallel",
  "ark-groth16/parallel",
  "ark-poly-commit/parallel",
  "ark-poly/parallel",
  "ark-ec/parallel",
  "ark-ff/parallel",
  "ark-std/parallel",
]
