[package]
name = "arkworks-setups"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arkworks-r1cs-circuits = { path = "../arkworks-r1cs-circuits", version = "0.5.0", default-features = false }
arkworks-r1cs-gadgets = { path = "../arkworks-r1cs-gadgets", version = "0.5.0", default-features = false }
arkworks-native-gadgets = { path = "../arkworks-native-gadgets", version = "0.5.0", default-features = false }

ark-crypto-primitives = { version = "^0.3.0", features = ["r1cs"], default-features = false }
ark-ff = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-serialize = {version = "^0.3.0", default-features = false }
ark-groth16 = { version = "^0.3.0", default-features = false }

tiny-keccak = { version = "2.0.2", features = ["keccak"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
crypto_box = { version = "0.7.1" }

[dependencies.arkworks-utils]
path = "../arkworks-utils"
version = "0.5.0"
default-features = false
features = ["poseidon_bn254_x5_2", "poseidon_bn254_x5_3", "poseidon_bn254_x5_4", "poseidon_bn254_x5_5"]

[dev-dependencies]
ark-snark = { version = "^0.3.0", default-features = false }
digest = { version = "0.9" }

# curves
ark-bn254 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
hex-literal = { version = "0.3.4" }

[features]
default = ["std"]
r1cs = []
plonk = []
std = [
  "arkworks-r1cs-circuits/std",
  "arkworks-r1cs-gadgets/std",
  "arkworks-native-gadgets/std",
  "ark-crypto-primitives/std",
  "ark-ff/std",
  "ark-std/std",
  "ark-r1cs-std/std",
  "ark-relations/std",
  "ark-ec/std",
  "ark-groth16/std",
  "ark-serialize/std",
  "arkworks-utils/std",
  "codec/std",
]
parallel = [
  "ark-crypto-primitives/parallel",
  "ark-std/parallel",
  "ark-r1cs-std/parallel",
  "ark-ec/parallel",
  "ark-groth16/parallel",
  "ark-ff/parallel",
  "arkworks-r1cs-circuits/parallel",
  "arkworks-r1cs-gadgets/parallel",
]

