[package]
name = "arkworks-utils"
version = "0.5.3"
authors = ["Webb Developers"]
edition = "2018"
description = "Webb protocol's utils for zero-knowledge gadgets and circuits"
license = "Apache-2.0"
repository = "https://github.com/webb-tools/arkworks-gadgets"
homepage = "https://webb.tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
ark-std = { version = "^0.3.0", default-features = false }
ark-ff = { version = "^0.3.0", default-features = false }

[features]
std = ["ark-std/std"]

poseidon_bls381_x3_3 = []
poseidon_bls381_x3_5 = []

poseidon_bls381_x5_3 = []
poseidon_bls381_x5_5 = []

poseidon_bls381_x17_3 = []
poseidon_bls381_x17_5 = []

poseidon_bn254_x3_3 = []
poseidon_bn254_x3_5 = []

poseidon_bn254_x5_2 = []
poseidon_bn254_x5_3 = []
poseidon_bn254_x5_4 = []
poseidon_bn254_x5_5 = []

poseidon_bn254_x17_3 = []
poseidon_bn254_x17_5 = []

mimc_ed_on_bn254_220 = []

parallel = [
    "ark-std/parallel",
    "ark-ff/parallel",
]
