[package]
name = "arkworks-plonk-circuits"
version = "1.2.1"
authors = ["Webb Developers"]
edition = "2021"
description = "Webb protocol's plonk zero-knowledge circuits written using Arkworks (ark-plonk)"
license = "Apache-2.0"
repository = "https://github.com/webb-tools/zero-knowledge-gadgets"
homepage = "https://webb.tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arkworks-native-gadgets = { path = "../native-gadgets", version = "1.2.1", default-features = false }
arkworks-plonk-gadgets = { path = "../plonk-gadgets", version = "1.2.1", default-features = false }

plonk-core = { version = "^0.1.0", git = "https://github.com/ZK-Garage/plonk", features = ["trace"], default-features = false }
ark-ff = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-poly-commit = { version = "^0.3.0", default-features = false }
ark-poly = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }

[dev-dependencies]
# curves
ark-ed-on-bn254 = { version = "^0.3.0", default-features = false, features = [ "r1cs" ] }
ark-bn254 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
plonk-hashing = { path = "../plonk-hashing" }
ark-serialize = { version = "^0.3.0", default-features = false }

[dev-dependencies.arkworks-utils]
path = "../utils"
default-features = false
features = ["poseidon_bn254_x5_2", "poseidon_bn254_x5_3", "poseidon_bn254_x5_4", "poseidon_bn254_x5_5"]

[features]
default = ["std"]
std = [
    "ark-std/std",
    "arkworks-native-gadgets/std",
    "arkworks-plonk-gadgets/std",
    "ark-ff/std",
    "ark-ec/std",
    "ark-poly-commit/std",
    "ark-poly/std",
]
